--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
       </div>
       <main>
       </main>
+      <footer class="second_footer">
+        <div class="button button--play">
+          <div class="button__shape button__shape--one"></div>
+          <div class="button__shape button__shape--two"></div>
+        </div>
+        <audio id="audio-player">
+          <source src="https://a.tumblr.com/tumblr_rti9qey0A11v1tr3no1.mp3" type="audio/mpeg">
+        </audio>
+      </footer>
+      <footer class="first_footer">
+        <p style="font-family: Helvetica, sans-serif; font-size: 8px; font-weight: 200;">All rights reserved &copy; 2023</p>
+      </footer>
       <footer>
-        <p style="font-family: Helvetica, sans-serif; font-size: 8px; font-weight: 200; margin-left: 20px;">All rights reserved &copy; 2023</p>
+        <div class="pull">projet sonore_mixage final00,<br>son, 2021</div>
       </footer>
     </div>
     <div class='right-box' div id="main_page">
@@ -102,5 +114,8 @@
     <script src="src/script.js"></script>  
 
     <script src="public/bundle.js"></script>
+
+    <!-- Audio Player JS -->
+<script  src="js/player.js"></script>
   </body>
 </html>
