--- a/src/03.html
+++ b/src/03.html
@@ -15,6 +15,7 @@
 		body {
 			background-color: transparent;
 			padding-left: 50px;
+			padding-right: 50px;
 		}
 		h1 {
 			font-size: 18px;
@@ -40,13 +41,13 @@
 			width: 500px;
 		}
 		#work-image-2 {
-			width: 98px;
+			width: calc(500px/3 - 2px);
 		}
 		#work-image-3 {
-			width: 98px;
+			width: calc(500px/3 - 2px);
 		}
 		#work-image-4 {
-			width: 98px;
+			width: calc(500px/3 - 2px);
 		}
 		#zoom-box {
 			position: fixed;
@@ -104,24 +105,23 @@
   			align-items: center;
   			justify-content: center;
 			padding-left: 0;
+			padding-right: 0;
+			margin-top: 0;
 			}
 			p {
-			max-width: 300px;
+			max-width: 100%;
 		}
-			/* img {
-				max-width: 300px;
-			} */
 			#work-image-1 {
-				width: 300px;
+				width: 100%;
 			}
 			#work-image-2 {
-				width: 98px;
+				width: calc(33% - 2px);
 			}
 			#work-image-3 {
-				width: 98px;
+				width: calc(33% - 2px);
 			}
 			#work-image-4 {
-				width: 98px;
+				width: calc(33% - 2px);
 			}
 		}
 	</style>
