--- a/src/01.html
+++ b/src/01.html
@@ -12,57 +12,33 @@
 		  -o-user-select: none; /* Opera */
 		}
     body {
-      /* margin: 0; */
-      margin-top: 20px;
-      padding: 0;
+      margin-top: 30px;
+      padding-left: 50px;
     }
-    .layer_main {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 0;
-      width: 100%;
-      height: 100%;
-      transform: scaleX(-1);
-      Mix-blend-mode: screen;
-    }
-    .layer_main img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      Object-fit: cover;
-    }
-    .main_img {
-      position: relative;
-      z-index: -1;
-      width: auto;
-      height: auto;
-      overflow: hidden;
-    }
-    .main_img img {
-      display: block;
-      Width: 100%;
-      height: auto;
-        }
-
+  
     .youtube-video {
       position: absolute;
       width: 560px;
       height: 315px;
-      border: 1px solid #ccc;
-      background-color: #f9f9f9;
-      margin-bottom: 20px;
+      border: 0px solid #cccccc00;
+      background-color: #f9f9f900;
         }
     .youtube-video iframe {
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
       border: none;
       z-index: 1;
         }
 
-    @media screen and (max-width: 560px) {
+    @media screen and (max-width: 800px) {
+      body {
+      padding-left: 0;
+      padding-right: 0;
+    }
     .youtube-video {
-        position: absolute;
+        display: flex;
+  		  align-items: center;
+  		  justify-content: center;
         width: 100%;
         left: 0;
         right: 0;
@@ -71,15 +47,8 @@
     </style>
   </head>
 <body>
-
-<div class="layer_main">
-  <!-- <img src="img/layer_main.gif"> -->
-</div>
-
-<div class="main_img">
-  <!-- <img src="img/main_img.png"> -->
-</div>
-
+<div></div>
+<br>
 <div class="youtube-video">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/0wHDzcQz744" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
