--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <br>
           <span id="Menu03" class="hidden"><a href="#" onclick="loadPage('src/03.html');">work</a></span>
           <br>
-          <span id="Menu04" class="hidden"><a href="#" onclick="loadPage('src/04.html');">etc</a></span>
+          <span id="Menu04" class="hidden"><a href="#" onclick="loadPage('src/04.html');">notes</a></span>
+          <br>
+          <span id="Menu05" class="hidden"><a href="#" onclick="loadPage('src/05.html');">product</a></span>
           <span class="hidden">
             <a href="https://www.instagram.com/tiredgroove" id="instaLink" target="_blank"><img src="src/img/Instagram_logo_2016.svg.png" class="insta_logo"> Instagram</a>
           </span>
