--- a/src/05.html
+++ b/src/05.html
@@ -12,9 +12,6 @@
 		  -o-user-select: none; /* Opera */
 		}
 		body {
-			background-image: url(img/etc/bluesky.png);
-			background-size: cover;
-			background-position: initial;
 			background-color: transparent;
 			padding-left: 50px;
 			padding-right: 50px;
@@ -36,18 +33,7 @@
 			margin-bottom: 0;
 			max-width: 700px;
 		}
-		.text {
-			position: absolute;
-			z-index: 2;
-		}
-		.box img {
-			width: 100%;
-			height: auto;
-			object-fit: cover;
-			z-index: 1;
-			padding: 0;
-			margin: 0;
-		}
+		
 
 		@media only screen and (max-width: 560px) {
 			body {
@@ -64,10 +50,15 @@
 </head>
 <body>
 	<div class="text">
-	<h1>notes</h1>
+	<h1>product</h1>
+	<div>
+		<p>
+			네 안녕하세요 이번에 소개할 상품은요? 바로 ???? 입니다.
+			<br>
+			I want this for free / No, you can't
+		</p>
 	</div>
-<div class="box">
-</div>
+	</div>
 <script>
 document.addEventListener('contextmenu', function(e) {
 			// prevent right-click menu from appearing
