--- a/src/03.html
+++ b/src/03.html
@@ -69,6 +69,7 @@
 		}
 		#zoom-box:hover::before {
   content: "Click to zoom out";
+  font-family: Cambria, sans-serif;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -76,7 +77,7 @@
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   transition: opacity 0.3s ease;
   opacity: 0;
 }
