--- a/src/01.html
+++ b/src/01.html
@@ -15,38 +15,72 @@
       margin-top: 30px;
       padding-left: 50px;
     }
-    #imageNtext {
-    display: flex;
-    width: 560px;
-    align-items: top;
+    .image-container {
+      background-image: url("img/artworks-projet sonore_mixage final00_500x500.jpg");
+      background-size: 200px;
+      background-repeat: no-repeat;
+      background-color: black;
+      width: 560px;
+      height: 200px;
+      position: relative;
     }
-    text {
-    margin-left: 20px;
-    }
-
-    .youtube-video {
+    .text-box {
       position: absolute;
+      top: 50%; /* adjust as needed */
+      left: 50%; /* adjust as needed */
+      transform: translate(-50%, -50%);
+      background-color: transparent;
+      color: antiquewhite;
+      padding: 10px;
+      font-size: 10px;
+      font-weight: 100;
+      text-align: left;
+    }
+    .youtube-video {
+      position: static;
       width: 560px;
       height: 315px;
       border: 0px solid #cccccc00;
       background-color: #f9f9f900;
+      float: none;
         }
     .youtube-video iframe {
       max-width: 100%;
       max-height: 100%;
       border: none;
-      z-index: 1;
+      /* z-index: 1; */
         }
+
+    .image-sky {
+      position: static;
+      width: 560px;
+      margin: 0;
+    }
+    .image-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .image-box img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
 
     @media screen and (max-width: 560px) {
       body {
-      padding-left: 0;
-      padding-right: 0;
+        padding: 0;
+        margin: 0;
     }
-    #imageNtext {
-      display: flex;
+    .image-container {
       width: 100%;
-      justify-content: center;
+    }
+    .text-box {
+      width: 80%;
+      text-overflow: ellipsis;
     }
     .youtube-video {
         display: flex;
@@ -55,33 +89,40 @@
         width: 100%;
         left: 0;
         right: 0;
-    }}
-
+    }
+    .image-sky {
+      width: 100%;
+    }
+  }
     </style>
   </head>
 <body>
 <div></div>
-<br>
-<div id="imageNtext">
-  <img src="img/artworks-projet sonore_mixage final00_500x500.jpg" width="200">
-  <p>Click play button below to litsen to background sound</p>
+<!-- <br> -->
+<div class="image-container">
+  <span class="text-box">Une partie du son enregistré près du sol dans la pluie pour toute la durée comme le fond, elle a été modifiée de réduction de bruit. A partir d'un autre enregistrement, sont retirés le chant des oiseaux, le rire des enfants et les paroles téléphoniques de la dame qui se répètent dans le mixage au rythme de chaque élément.
+    Un effet appliqué sur les sons par la réglage de l’égalisation s’inscrit dans un contexte spatiale: un sens d’enfermement, la vibration en écho. Son volume s’amplifie progressivement, disparaît en fondu à la fin, et cet évolution chronique fait que la musique entre dans le champs narratif pour un récit de l’expérience.<br><br>Click the play button below to listen</span>  
 </div>
-<br>
+<!-- <br> -->
 <div class="youtube-video">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/0wHDzcQz744" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
-<br>
-<div id="imageNtext">
-  <img src="img/nailmoon.JPG" width="500">
-  <p>in Algeria</p>
+<!-- <br> -->
+<div class="image-sky">
+  <div class="image-box">
+  <img src="img/nailmoon.JPG">
+</div>
+</div>
+<div class="image-sky">
+  <div class="image-box">
+  <img src="img/bluesky.png">
+</div>
 </div>
 <script>
 document.addEventListener('contextmenu', function(e) {
   // prevent right-click menu from appearing
   e.preventDefault();
 });
-
-
 </script>
 </body>
 </html>
