--- a/src/04.html
+++ b/src/04.html
@@ -12,10 +12,11 @@
 		  -o-user-select: none; /* Opera */
 		}
 		body {
-			background-image: url(img/etc/bluesky.png);
+			/* background-image: url(img/etc/bluesky.png);
 			background-size: cover;
 			background-position: initial;
 			background-color: transparent;
+			background-repeat: no-repeat; */
 			padding-left: 50px;
 			padding-right: 50px;
 		}
