--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p style="font-family: Helvetica, sans-serif; font-size: 8px; font-weight: 200;">All rights reserved &copy; 2023</p>
       </footer>
       <footer>
-        <div class="pull">projet sonore_mixage final00,<br>son, 2021</div>
+        <div class="pull">projet sonore_mixage final00,<br>mixed sound, 2021</div>
       </footer>
     </div>
     <div class='right-box' div id="main_page">
