--- a/src/01.html
+++ b/src/01.html
@@ -100,8 +100,7 @@
 <div></div>
 <!-- <br> -->
 <div class="image-container">
-  <span class="text-box">Une partie du son enregistré près du sol dans la pluie pour toute la durée comme le fond, elle a été modifiée de réduction de bruit. A partir d'un autre enregistrement, sont retirés le chant des oiseaux, le rire des enfants et les paroles téléphoniques de la dame qui se répètent dans le mixage au rythme de chaque élément.
-    Un effet appliqué sur les sons par la réglage de l’égalisation s’inscrit dans un contexte spatiale: un sens d’enfermement, la vibration en écho. Son volume s’amplifie progressivement, disparaît en fondu à la fin, et cet évolution chronique fait que la musique entre dans le champs narratif pour un récit de l’expérience.<br><br>Click the play button below to listen</span>  
+  <span class="text-box">Chant des oiseaux, rire des enfants et paroles téléphoniques de la dame au rythme dans un contexte spatiale<br><br>Click the play button below to listen</span>  
 </div>
 <!-- <br> -->
 <div class="youtube-video">
