--- a/src/05.html
+++ b/src/05.html
@@ -43,19 +43,23 @@
 			padding-right: 0;
 			margin-top: 0;
 			}
+			h1 {
+				/* position: fixed; */
+				padding-left: 10px;
+			}
 
 		}
 
 	</style>
 </head>
 <body>
-	<div class="text">
+	<div>
 	<h1>product</h1>
 	<div>
 		<p>
-			네 안녕하세요 이번에 소개할 상품은요? 바로 ???? 입니다.
+			Nothing yet here;
 			<br>
-			I want this for free / No, you can't
+			just enjoy background moving color fragments
 		</p>
 	</div>
 	</div>
