--- a/src/04.html
+++ b/src/04.html
@@ -12,11 +12,6 @@
 		  -o-user-select: none; /* Opera */
 		}
 		body {
-			/* background-image: url(img/etc/bluesky.png);
-			background-size: cover;
-			background-position: initial;
-			background-color: transparent;
-			background-repeat: no-repeat; */
 			padding-left: 50px;
 			padding-right: 50px;
 		}
@@ -28,35 +23,34 @@
 			margin-top: 30px;
 			margin-bottom: 30px;
 		}
-		p {
-			font-size: 12px;
-			font-family: helvetica, sans-serif;
-			font-weight: 100;
-			text-align: left;
-			margin-top: 0;
-			margin-bottom: 0;
-			max-width: 700px;
-		}
-		.text {
-			position: absolute;
-			z-index: 2;
-		}
-		.box img {
+		.color_box {
+			position: static;
 			width: 100%;
-			height: auto;
-			object-fit: cover;
-			z-index: 1;
-			padding: 0;
+			height: 200px;
+			display: flex;
+			overflow: hidden;
 			margin: 0;
 		}
-
+		.text-box {
+			position: relative;
+      		transform: translate(10%, 50%);
+      		background-color: transparent;
+      		color: white;
+      		padding: 0;
+      		font-size: 30px;
+      		font-weight: 400;
+			font-family: Helvetica, sans-serif;
+			font-style: italic;
+      		text-align: center;
+    	}
 		@media only screen and (max-width: 560px) {
 			body {
-			background-color: transparent;
-			display: flex;
-			padding-left: 0;
-			padding-right: 0;
-			margin-top: 0;
+			padding: 0;
+			margin: 0;
+			}
+			h1 {
+				position: fixed;
+				padding-left: 10px;
 			}
 
 		}
@@ -64,10 +58,44 @@
 	</style>
 </head>
 <body>
-	<div class="text">
+	<div>
 	<h1>notes</h1>
 	</div>
-<div class="box">
+<div class="color_box" style="background-color: #ff146b;">
+	<span class="text-box">Rose: #ff146b</span>  
+</div>
+<div class="color_box" style="background-color: #ffe010;">
+	<span class="text-box">Yellow: #ffe010</span>  
+</div>
+<div class="color_box" style="background-color: #65e9d3;">
+	<span class="text-box">Warm cyan: #65e9d3</span>  
+</div>
+<div class="color_box" style="background-color: #2f56c0;">
+	<span class="text-box">Warm navy: #2f56c0</span>  
+</div>
+<div class="color_box" style="background-color: #c9bfa2;">
+	<span class="text-box">Beige: #c9bfa2</span>  
+</div>
+<div class="color_box" style="background-color: #4d9659;">
+	<span class="text-box">Plant green: #4d9659</span>  
+</div>
+<div class="color_box" style="background-color: #9fe5ff;">
+	<span class="text-box">Sky blue: #9fe5ff</span>  
+</div>
+<div class="color_box" style="background-color: #fcfacf;">
+	<span class="text-box">Cream: #fcfacf</span>  
+</div>
+<div class="color_box" style="background-color: #ffc2e2;">
+	<span class="text-box">Light rose: #ffc2e2</span>  
+</div>
+<div class="color_box" style="background-color: #bdbdbd;">
+	<span class="text-box">Light gray: #bdbdbd</span>  
+</div>
+<div class="color_box" style="background-color: #f266ab;">
+	<span class="text-box">Medium rose: #f266ab</span>  
+</div>
+<div class="color_box" style="background-color: #503919;">
+	<span class="text-box">Brown: #503919</span>  
 </div>
 <script>
 document.addEventListener('contextmenu', function(e) {
