--- a/src/01.html
+++ b/src/01.html
@@ -11,111 +11,10 @@
 		  -ms-user-select: none; /* Internet Explorer/Edge */
 		  -o-user-select: none; /* Opera */
 		}
-    body {
-      margin-top: 30px;
-      padding-left: 50px;
-    }
-    .image-container {
-      background-image: url("img/artworks-projet sonore_mixage final00_500x500.jpg");
-      background-size: 200px;
-      background-repeat: no-repeat;
-      background-color: black;
-      width: 560px;
-      height: 200px;
-      position: relative;
-    }
-    .text-box {
-      position: absolute;
-      top: 50%; /* adjust as needed */
-      left: 50%; /* adjust as needed */
-      transform: translate(-50%, -50%);
-      background-color: transparent;
-      color: antiquewhite;
-      padding: 10px;
-      font-size: 10px;
-      font-weight: 100;
-      text-align: left;
-    }
-    .youtube-video {
-      position: static;
-      width: 560px;
-      height: 315px;
-      border: 0px solid #cccccc00;
-      background-color: #f9f9f900;
-      float: none;
-        }
-    .youtube-video iframe {
-      max-width: 100%;
-      max-height: 100%;
-      border: none;
-      /* z-index: 1; */
-        }
-
-    .image-sky {
-      position: static;
-      width: 560px;
-      margin: 0;
-    }
-    .image-box {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .image-box img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-
-    @media screen and (max-width: 560px) {
-      body {
-        padding: 0;
-        margin: 0;
-    }
-    .image-container {
-      width: 100%;
-    }
-    .text-box {
-      width: 80%;
-      text-overflow: ellipsis;
-    }
-    .youtube-video {
-        display: flex;
-  		  align-items: center;
-  		  justify-content: center;
-        width: 100%;
-        left: 0;
-        right: 0;
-    }
-    .image-sky {
-      width: 100%;
-    }
-  }
     </style>
   </head>
 <body>
-<div></div>
-<!-- <br> -->
-<div class="image-container">
-  <span class="text-box">Chant des oiseaux, rire des enfants et paroles téléphoniques de la dame au rythme dans un contexte spatiale<br><br>Click the play button below to listen</span>  
-</div>
-<!-- <br> -->
-<div class="youtube-video">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/0wHDzcQz744" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
-<!-- <br> -->
-<div class="image-sky">
-  <div class="image-box">
-  <img src="img/nailmoon.JPG">
-</div>
-</div>
-<div class="image-sky">
-  <div class="image-box">
-  <img src="img/bluesky.png">
-</div>
+<div>
 </div>
 <script>
 document.addEventListener('contextmenu', function(e) {
