--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
   void main() {
     vec4 color = vec4( vColor );
     color.r += sin( vPosition.x * 10.0 + time ) * 0.05;
+    float distance = length(vPosition);
+    float randomFactor = 0.5 + 0.4 * fract(sin(distance) * 43758.5453);
+    color.a = randomFactor;
     gl_FragColor = color;
   }
 
